--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,19 +28,11 @@
 
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
-      {% if site.github.is_project_page %}
+        <a href="{{ https://www.linkedin.com/in/brian-coppedge/ }}" class="btn">LinkedIn Profile</a>
 
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+        <a href="{{ site.github.zip_url }}" class="btn">Download Resume</a>
 
-      {% endif %}
-
-      {% if site.show_downloads %}
-
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-
-      {% endif %}
+        <a href="{{ https://briancoppedge.github.io/briancoppedge.com/about }}" class="btn">About Me</a>
 
     </section>
 
