--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,11 +28,11 @@
 
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
-        <a href="{{ https://www.linkedin.com/in/brian-coppedge/ }}" class="btn">[https://www.linkedin.com/in/brian-coppedge/](LinkedIn Profile)</a>
+        <a href="https://www.linkedin.com/in/brian-coppedge/" class="btn">LinkedIn Profile</a>
 
         <a href="{{ site.github.zip_url }}" class="btn">Download Resume</a>
 
-        <a href="{{ https://briancoppedge.github.io/briancoppedge.com/about }}" class="btn">About Me</a>
+        <a href="https://briancoppedge.github.io/briancoppedge.com/about" class="btn">About Me</a>
 
     </section>
 
