--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
-        <a href="https://briancoppedge.github.io/briancoppedge.com/home" class="btn">Home</a>
+        <a href="https://briancoppedge.github.io/briancoppedge.com/index" class="btn">Home</a>
 
         <a href="https://briancoppedge.github.io/briancoppedge.com/about" class="btn">About</a>
         
