--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -54,7 +54,7 @@
 
       <footer class="site-footer">
 
-        <span class="site-footer-credits">I wanna talk about me!</span>
+        <span class="site-footer-credits">Yo! What's poppin'?</span>
 
       </footer>
 
