--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -28,19 +28,17 @@
 
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
-      {% if site.github.is_project_page %}
+        <a href="https://briancoppedge.github.io/briancoppedge.com/index" class="btn">Home</a>
 
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+        <a href="https://briancoppedge.github.io/briancoppedge.com/about" class="btn">About</a>
+        
+        <a href="https://briancoppedge.github.io/briancoppedge.com/experience" class="btn">Experience</a>
+      
+        <a href="https://briancoppedge.github.io/briancoppedge.com/interests" class="btn">Interests</a>
+      
+        <a href="https://www.linkedin.com/in/brian-coppedge/" class="btn">LinkedIn Profile</a>
 
-      {% endif %}
-
-      {% if site.show_downloads %}
-
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-
-      {% endif %}
+        <a href="{{ site.github.zip_url }}" class="btn">Download Resume</a>
 
     </section>
 
