--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,9 +36,9 @@
       
         <a href="https://briancoppedge.github.io/briancoppedge.com/interests" class="btn">Interests</a>
       
+        <a href="https://briancoppedge.github.io/briancoppedge.com/connect" class="btn">Connect</a>
+      
         <a href="https://www.linkedin.com/in/brian-coppedge/" class="btn">LinkedIn Profile</a>
-
-        <a href="{{ site.github.zip_url }}" class="btn">Download Resume</a>
 
   
 
