--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -36,9 +36,7 @@
       
         <a href="https://briancoppedge.github.io/briancoppedge.com/interests" class="btn">Interests</a>
       
-        <a href="https://www.linkedin.com/in/brian-coppedge/" class="btn">LinkedIn Profile</a>
-
-        <a href="{{ site.github.zip_url }}" class="btn">Download Resume</a>
+         <a href="https://briancoppedge.github.io/briancoppedge.com/connect" class="btn">Connect</a>
 
     </section>
 
