--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -36,7 +36,7 @@
       
         <a href="https://briancoppedge.github.io/briancoppedge.com/interests" class="btn">Interests</a>
       
-        <a href="https://briancoppedge.github.io/briancoppedge.com/connect" class="btn">Connect</a> 
+        <a href="https://briancoppedge.github.io/briancoppedge.com/contact" class="btn">Connect</a> 
 
     </section>
 
@@ -50,7 +50,7 @@
 
       <footer class="site-footer">
 
-        <span class="site-footer-credits">Yo! What's poppin'?</span>
+        <span class="site-footer-credits">Go and be awesome!</span>
 
       </footer>
 
