--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,20 @@
 
 
 
+          <footer>
+
+            <p class="pull-right"><a href="#intro">Back to top</a></p>
+
+            <p>&copy; {{ site.time | date: '%Y'}} Brian Coppedge</p>
+
+            <img class="img img-responsive footer-logo"
+
+             src="/images/profilepic.jpg" />
+
+          </footer>
+
+        </div>
+
     {% if site.google_analytics %}
 
       <script type="text/javascript">
