--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,14 @@
       <footer class="site-footer">
 
         <span class="site-footer-credits">Go and be awesome!</span>
+        
+        <p class="pull-right"><a href="#intro">Back to top</a></p>
+
+        <p>&copy; {{ site.time | date: '%Y'}} Brian Coppedge</p>
+
+        <img class="img img-responsive footer-logo"
+
+         src="/images/profilepic.jpg" />
 
       </footer>
 
