--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,15 +52,13 @@
 
       <footer class="site-footer">
 
-        <span class="site-footer-credits">Go and be awesome!</span>
+        <span class="site-footer-credits">&copy; {{ site.time | date: '%Y'}} Brian Coppedge</span>
         
         <p class="pull-right"><a href="#intro">Back to top</a></p>
 
         <p>&copy; {{ site.time | date: '%Y'}} Brian Coppedge</p>
 
-        <img class="img img-responsive footer-logo"
-
-         src="/images/profilepic.jpg" />
+        <img src="/images/profilepic.jpg" >
 
       </footer>
 
