--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -50,7 +50,7 @@
 
       <footer class="site-footer">
 
-        <span class="site-footer-credits">Go and be awesome!</span>
+        <span class="site-footer-credits">&copy; {{ site.time | date: '%Y'}} Brian Coppedge</span>
 
       </footer>
 
